--- a/towns.html
+++ b/towns.html
@@ -25,6 +25,11 @@
 
 <div id="result"></div>
 
+<div>
+    <input type="text" id="townNameForAdd" />
+    <button id="btnAdd">Add</button>
+</div>
+
 </body>
 
 </html>
