--- a/towns.html
+++ b/towns.html
@@ -29,6 +29,9 @@
     <input type="text" id="townNameForAdd" />
     <button id="btnAdd">Add</button>
 </div>
+<div>
+    <button id="btnShuffle">Shuffle</button>
+</div>
 
 </body>
 
